--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "mantap",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Tools untuk mengoptimalkan assets buat blog",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "unbuild",
+    "prepublishOnly": "npm run build",
+    "release": "bumpp --push --commit --tag"
   },
   "bin": {
-    "mantap": "./index.js"
+    "mantap": "dist/index.js.mjs"
   },
   "repository": {
     "type": "git",
@@ -20,10 +22,12 @@
     "url": "https://github.com/mzaini30/mantap/issues"
   },
   "homepage": "https://github.com/mzaini30/mantap#readme",
-  "dependencies": {
+  "devDependencies": {
+    "bumpp": "^7.1.1",
     "clean-css": "^5.2.2",
     "recursive-readdir-sync": "^1.0.6",
     "sharp": "^0.29.3",
-    "uglify-js": "^3.14.4"
+    "uglify-js": "^3.14.4",
+    "unbuild": "^0.7.4"
   }
 }
